checker/tests/nullness-extra/issue594/Expected.txt
Issue594.java:19: error: [return.type.incompatible] incompatible types in return.
        return result;
               ^
  found   : T extends @Initialized @Nullable Object super SOMETHING
  required: T extends @Initialized @Nullable Object super SOMETHING-ELSE
1 error
